testsuite/tests/typecheck/should_fail/T16059c.stderr

T16059c.hs:6:6: error:
    • Illegal polymorphic type: forall a1. a1
    • In the expansion of type synonym ‘Foo’
      In the type signature: f :: Foo -> a -> f
    Suggested fix: Perhaps you intended to use RankNTypes
